multithreaded training/loading

--- a/.gitignore
+++ b/.gitignore
@@ -153,7 +153,7 @@ dmypy.json
 cython_debug/
 
 messages/*
-outputs/*
+models/*
 
 # PyCharm
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
